--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@quasar/extras": "^1.16.4",
     "quasar": "^2.16.0",
+    "sharp": "^0.33.4",
     "vue": "^3.4.18",
     "vue-router": "^4.0.12"
   },
