--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.16.4",
+    "electron-log": "^5.1.5",
     "quasar": "^2.16.0",
     "sharp": "^0.33.4",
     "vue": "^3.4.18",
