--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "@electron/packager": "^18.3.2",
+    "@electron/rebuild": "^3.6.0",
     "@quasar/app-vite": "^1.9.0",
     "autoprefixer": "^10.4.2",
     "electron": "^31.0.2",
